@@ -1,3 +1,8 @@
+2024-06-05 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3741.c:
+	  Add a regression test for a reported bug that I haven't been able to reproduce locally.
+
 2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
